--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,17 @@ body {
   border: 1px solid red;
 }
 
+.page-header {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 1em;
+}
+
+.page-header h1 {
+  margin:0;
+  font-size: 1em;
+  text-transform: uppercase;
+}
 
 
 
