--- a/css/main.css
+++ b/css/main.css
@@ -111,28 +111,74 @@ html {
 }
 
 body {
-  border: 1px solid red;
+  font-family: sans-serif;
+  font-size: 1.25em;
 }
 
 .page-header {
   background-color: #000000;
   color: #ffffff;
   padding: 1em;
+  width: 100%;
+  display: inline-block;
+  top: 0;
+  position: fixed;
 }
 
 .page-header h1 {
   margin:0;
   font-size: 1em;
   text-transform: uppercase;
+  font-family: sans-serif;
+}
+
+.page-header i{
+    float: right;
+    margin-top:-20px;
+}
+
+.banner{
+  background: url(../img/purple-bg.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  padding-bottom:100px;
+}
+
+.banner h2 {
+  color: white;
+  font-size: 3.5em;
+  text-align: center;
+  width: 60%;
+  margin: 0 auto;
+  line-height: 1em;
+  padding-top:180px;
+  padding-bottom:50px;
+}
+
+.banner .button {
+  color: white;
+  text-align: center;
+  border: 2px solid #ffffff;
+  padding: 20px;
+  font-size: 1.5em;
+  width:215px;
+  margin: 0 auto;
+}
+
+.about {
+    border-bottom: 1px solid #bababa;
+}
+
+.about h3 p {
+    margin: 0 25px;
 }
 
 
-
-
-
-
-
-
+footer {
+  text-align: center;
+  border-top: 1px solid #bababa;
+}
 
  /* ==========================================================================
    Helper classes
