--- a/css/main.css
+++ b/css/main.css
@@ -164,8 +164,8 @@ body {
   border: 2px solid #ffffff;
   padding: 20px;
   font-size: 1.5em;
-  width:215px;
   margin: 0 auto;
+  display: inline-block;
 }
 
 .page-content {
