--- a/css/main.css
+++ b/css/main.css
@@ -145,21 +145,22 @@ body {
   background-size: cover;
   background-position: top;
   padding-bottom:100px;
+  text-align: center;
 }
 
 .banner h2 {
-  color: white;
+  color: #ffffff;
   font-size: 3.5em;
   text-align: center;
   width: 60%;
-  margin: 0 auto;
   line-height: 1em;
   padding-top:180px;
   padding-bottom:50px;
+  margin: 0 auto;
 }
 
 .banner .button {
-  color: white;
+  color: #ffffff;
   text-align: center;
   border: 2px solid #ffffff;
   padding: 20px;
