--- a/css/main.css
+++ b/css/main.css
@@ -205,13 +205,14 @@ a figcaption {
   background-color: rgba(255, 255, 255, .5);
   width: 100%;
   height: 100%;
-  color: #ffffff;
+  color: #000000;
   font-size: 2em;
   padding-top:30%;
   font-weight: bold;
 }
 
 a figcaption:hover {
+    color: #ffffff;
   background-color: rgba(255, 255, 255, .0);
 }
 
