--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,8 @@ html {
 }
 
 body {
-  padding-top: 3em;
+  padding-top: 3.25em;
+  font-family: sans-serif;
 
 }
 
@@ -148,6 +149,64 @@ img {
   top: 1em;
   right: 1em;
 }
+
+.page-section {
+  padding: 1em;
+  border-bottom: 1px solid #ddd;
+}
+
+.button {
+  border: .125em solid #000000;
+  padding: 0.5em 1em;
+  font-size: 1.25em;
+  text-decoration: none;
+  color: #000000;
+  display: inline-block;
+}
+
+.button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.jumbotron {
+  padding: 0;
+  position: relative;
+}
+
+.jumbotron_bg {
+  position: relative;
+  z-index: -10;
+  display: block;
+  width: 100%;
+}
+
+.jumbotron_content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  line-height: 1;
+  color: white;
+}
+
+.jumbotron_content h2 {
+  margin-top: 0;
+  font-size: 3em;
+
+}
+
+.jumbotron_content .button {
+  color: white;
+  border-color: white;
+}
+
+.jumbotron_content .button:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
+
 
  /* ==========================================================================
    Helper classes
