--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,7 @@ img {
   top:0;
   left: 0;
   width: 100%;
+  z-index: 1;
 
 }
 
@@ -157,7 +158,7 @@ img {
 
 .button {
   border: .125em solid #000000;
-  padding: 0.5em 1em;
+  padding: 0.75em 1em;
   font-size: 1.25em;
   text-decoration: none;
   color: #000000;
@@ -207,6 +208,39 @@ img {
   color: #000000;
 }
 
+.project-thumb {
+  position: relative;
+  width: 50%;
+  float: left;
+  background-color: hsla(0, 100%, 100%, 0.75);
+  border: 1px solid white;
+}
+
+.project-thumb:hover {
+  background-color: hsla(0, 0%, 0%, 0.5);
+}
+
+.project-thumb img {
+  position: relative;
+  z-index: -10;
+}
+
+.project-thumb h3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  text-align: center;
+  color: #000000;
+}
+.project-thumb:hover h3 {
+  color: #ffffff;
+}
+
+.page-footer {
+  text-align: center;
+}
 
  /* ==========================================================================
    Helper classes
